gitops-resources/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: flask
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: flask
    spec:
      containers:
        - resources: {}
          terminationMessagePath: /dev/termination-log
          name: container
          ports:
            - containerPort: 8080
              protocol: TCP
          imagePullPolicy: IfNotPresent
          terminationMessagePolicy: File
          image: 'docker.io/vitokotoko20/flask@sha256:9b145800346857b3c62c49b54fce866556e5c888369ac7443d5301195c54808e'
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: Recreate
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
