gitops-resources/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: flask01
spec:
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: flask
