gitops-resources/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: flask01
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: flask01
    weight: 100
  wildcardPolicy: None
